--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,10 +39,11 @@ body{
 img{
     height: 300px;
     width: 400px;
-    border:solid black 3px;
-    border-radius: 3px;
+    border-radius: 10px;
     background-color: whitesmoke;
+    border:0;
     outline: none;
+    
 }
 .tags{
     color: whitesmoke;
@@ -91,6 +92,9 @@ img{
 .rl{
     margin-top: 40px;
 }
+.rd{
+    margin-top: 30px;
+}
 .btnStyle{
     width: 390px;
     height: 40px;
@@ -124,14 +128,13 @@ button:active{
 #messageArea{
     display: none;
 }
+.fileStyle{
+    margin-bottom:20px;
+}
 #text{
-    height: 100px;
+    height: 300px;
     width: 400px;
     border-radius: 3px;
-}
-
-.dc{
-    height:670px;
 }
 .btnEncode{
     padding: 10px;
@@ -139,12 +142,14 @@ button:active{
     border-radius: 3px;
     font-weight: bold;
     margin-right: 20px;
+    font-size: 20px;
 }
 .btnDecode{
     padding: 10px;
     color: whitesmoke;
     border-radius: 3px;
     font-weight: bold;
+    font-size: 20px;
 }
 footer{
     display: flex;
@@ -154,4 +159,6 @@ footer{
     font-size: 15px;
     padding:20px;
     margin-top: 20px;
+    margin-left: -8px;
+    margin-right: -8px;
 }
