--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,17 +15,19 @@ body{
     display: flex;
     justify-content: center;
     height: 100%;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
     padding:20px;
 }
 .header2
 {
     display: flex;
-    justify-content: center;
     font-weight: bold;
-    padding:20px;
-    margin-bottom:-20px;
+    padding:10px;
+    margin-bottom:20px;
+    border:solid #03C04A 2px;
+    border-left:none;
+    border-right: none;
 }
 .stega
 {
@@ -104,7 +106,7 @@ img{
     margin-top: 30px;
 }
 .btnStyle{
-    width: 390px;
+    width: 393px;
     height: 40px;
     border:none;
     border-radius: 5px;
@@ -116,6 +118,7 @@ button{
     cursor: pointer;
     border: none;
     outline:none;
+    color: whitesmoke;
 }
 button:hover{
     background-color:#50C878;
@@ -151,6 +154,7 @@ button:active{
     font-weight: bold;
     margin-right: 20px;
     font-size: 20px;
+    margin-left: 10px;
 }
 .btnDecode{
     padding: 10px;
